<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">

	<TextView android:id="@+id/ProfileType" android:text="@string/profileEdit"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center_horizontal" android:textSize="12.0sp"
		android:textColor="#ff000000" android:background="#ff888888" />

	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:padding="10dp">

			<LinearLayout android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:orientation="vertical">

			</LinearLayout>

			<LinearLayout android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:orientation="vertical"
				android:layout_marginLeft="10dp">


				<TableLayout android:layout_width="fill_parent"
					android:layout_height="wrap_content">

					<TableRow>
						<TextView android:layout_width="fill_parent"
							android:layout_height="wrap_content" android:text="@string/profileNameLabel" />
						<EditText android:id="@+id/nameLabel" android:text="EditText"
							android:layout_height="wrap_content" android:layout_width="match_parent"></EditText>
					</TableRow>

					<TableRow>

					</TableRow>

					<TableRow>

						<TextView android:text="@string/activeLabel"
							android:layout_width="wrap_content" android:layout_height="wrap_content"
							android:layout_marginRight="10dip" />
						<CheckBox android:id="@+id/activeCheckbox"
							android:layout_width="wrap_content" android:layout_height="wrap_content" />

					</TableRow>

				</TableLayout>

			</LinearLayout>

		</LinearLayout>

	</ScrollView>
	<LinearLayout android:id="@+id/LinearLayout01"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical" android:layout_marginTop="100dp">

		<LinearLayout android:orientation="horizontal"
			android:id="@+id/LinearLayout1" android:layout_height="wrap_content"
			android:layout_gravity="center" android:layout_width="200dp">
			<Button android:text="@string/edit_attributes"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:layout_width="0dp" android:id="@+id/edit_attributes"></Button>
			<Button android:text="@string/edit_schedules"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:layout_width="0dp" android:id="@+id/edit_schedules"></Button>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
